[project]
name = "accent-confgend"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.11"
dependencies = [
  "automat>=20.2.0",
  "Jinja2>=2.11.3",
  "psycopg",
  "pyyaml>=6.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "sqlalchemy-utils>=0.37.2",
  "stevedore>=5.4.1",
  "Twisted>=21.2.0",
  "Unidecode>=1.2.0",
  "accent",
  "accent-dao",
]

[project.scripts]
accent-confgend = "accent_confgend.bin.daemon:main"

[project.entry-points."accent_confgend.asterisk.confbridge.conf"]
accent = "accent_confgend.plugins.confbridge_conf:ConfBridgeConfGenerator"

[project.entry-points."accent_confgend.asterisk.hep.conf"]
accent = "accent_confgend.plugins.hep_conf:HEPConfGenerator"

[project.entry-points."accent_confgend.asterisk.modules.conf"]
accent = "accent_confgend.plugins.modules_conf:ModulesConfGenerator"

[project.entry-points."accent_confgend.asterisk.musiconhold.conf"]
accent = "accent_confgend.plugins.musiconhold_conf:MOHConfGenerator"

[project.entry-points."accent_confgend.asterisk.rtp.conf"]
accent = "accent_confgend.plugins.rtp_conf:RTPConfGenerator"

[project.entry-points."accent_confgend.asterisk.pjsip.conf"]
accent = "accent_confgend.plugins.pjsip_conf:PJSIPConfGenerator"

[project.entry-points."accent_confgend.provd.network.yml"]
accent = "accent_confgend.plugins.provd_conf:ProvdNetworkConfGenerator"

[project.entry-points."accent_confgend.asterisk.features.conf"]
accent = "accent_confgend.plugins.features_conf:FeaturesConfGenerator"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent = { workspace = true }
accent-dao = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_confgend"]

[tool.hatch.build.targets.wheel]
include = ["accent_confgend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
