[project]
name = "accent-debug"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.11"
dependencies = [
  "cliff>=3.10.1",
  "requests>=2.25.1",
  "accent-amid-client",
  "accent-auth-client",
  "accent-call-logd-client",
  "accent-calld-client",
  "accent-chatd-client",
  "accent-dird-client",
  "accent-webhookd-client",
]

[project.scripts]
accent-debug = "accent_debug.main:main"

[project.entry-points."accent_debug.commands"]
access = "accent_debug.access:AccessCommand"
capture = "accent_debug.capture:CaptureCommand"
collect = "accent_debug.collect:CollectCommand"
public-ip = "accent_debug.public_ip:PublicIPCommand"
http-request-duration = "accent_debug.http_request_duration:HTTPRequestDurationCommand"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent-amid-client = { workspace = true }
accent-auth-client = { workspace = true }
accent-call-logd-client = { workspace = true }
accent-calld-client = { workspace = true }
accent-chatd-client = { workspace = true }
accent-dird-client = { workspace = true }
accent-webhookd-client = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_debug"]

[tool.hatch.build.targets.wheel]
include = ["accent_debug"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
