[project]
name = "accent-dird"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservice.com" }]
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.13.0",
  "cheroot>=8.5.2",
  "flask>=1.1.2",
  "Flask-Cors>=3.0.9",
  "Flask-RESTful>=0.3.8",
  "graphene>=3.2.1",
  "graphql-server[flask]>=3.0.0b5",
  "itsdangerous>=1.1.0",
  "Jinja2>=2.11.3",
  "jsonpatch~=1.21",
  "kombu>=5.0.2",
  "markupsafe>=1.1.1",
  "marshmallow>=3.10.0",
  "psycopg",
  "python-consul>=1.1.0",
  "python-ldap>=3.0.0",
  "pyyaml>=6.0",
  "requests>=2.25.1",
  "sqlalchemy[asyncio]>=2.0.0",
  "stevedore>=5.4.1",
  "Unidecode>=1.2.0",
  "werkzeug>=1.0.1",
  "accent-lib-rest-client",
  "accent-auth-client",
  "accent-confd-client",
  "accent-bus",
  "accent",
]

[project.scripts]
accent-dird = "accent_dird.main:main"
accent-dird-init-db = "accent_dird.init_db:main"

[project.entry-points."accent_dird.services"]
cleanup = "accent_dird.plugins.cleanup_service.plugin:StorageCleanupServicePlugin"
config = "accent_dird.plugins.config_service.plugin:ConfigServicePlugin"
display = "accent_dird.plugins.display_service.plugin:DisplayServicePlugin"
favorites = "accent_dird.plugins.favorites_service.plugin:FavoritesServicePlugin"
lookup = "accent_dird.plugins.lookup_service.plugin:LookupServicePlugin"
personal = "accent_dird.plugins.personal_service.plugin:PersonalServicePlugin"
phonebook = "accent_dird.plugins.phonebook_service.plugin:PhonebookServicePlugin"
profile = "accent_dird.plugins.profile_service.plugin:ProfileServicePlugin"
reverse = "accent_dird.plugins.reverse_service.plugin:ReverseServicePlugin"
service_discovery = "accent_dird.plugins.service_discovery_service.plugin:ServiceDiscoveryServicePlugin"
source = "accent_dird.plugins.source_service.plugin:SourceServicePlugin"

[project.entry-points."accent_dird.backends"]
accent = "accent_dird.plugins.accent_user_backend.plugin:AccentUserPlugin"
conference = "accent_dird.plugins.conference_backend.plugin:ConferencePlugin"
csv = "accent_dird.plugins.csv_backend.plugin:CSVPlugin"
csv_ws = "accent_dird.plugins.csv_ws_backend.plugin:CSVWSPlugin"
google = "accent_dird.plugins.google_backend.plugin:GooglePlugin"
ldap = "accent_dird.plugins.ldap_backend.plugin:LDAPPlugin"
office365 = "accent_dird.plugins.office365_backend.plugin:Office365Plugin"
personal = "accent_dird.plugins.personal_backend.plugin:PersonalBackend"
phonebook = "accent_dird.plugins.phonebook_backend.plugin:PhonebookPlugin"

[project.entry-points."accent_dird.views"]
accent_backend = "accent_dird.plugins.accent_user_backend.plugin:AccentUserView"
api_view = "accent_dird.plugins.api.plugin:ApiViewPlugin"
backends_view = "accent_dird.plugins.backends.plugin:BackendsViewPlugin"
conference_view = "accent_dird.plugins.conference_backend.plugin:ConferenceViewPlugin"
config_view = "accent_dird.plugins.config.plugin:ConfigViewPlugin"
csv_backend = "accent_dird.plugins.csv_backend.plugin:CSVView"
csv_ws_backend = "accent_dird.plugins.csv_ws_backend.plugin:CSVWSView"
default_json = "accent_dird.plugins.default_json.plugin:JsonViewPlugin"
displays_view = "accent_dird.plugins.displays.plugin:DisplaysViewPlugin"
google_view = "accent_dird.plugins.google_backend.plugin:GoogleViewPlugin"
graphql_view = "accent_dird.plugins.graphql.plugin:GraphQLViewPlugin"
headers_view = "accent_dird.plugins.headers.plugin:HeadersViewPlugin"
ldap_backend = "accent_dird.plugins.ldap_backend.plugin:LDAPView"
office365_backend = "accent_dird.plugins.office365_backend.plugin:Office365View"
personal_backend = "accent_dird.plugins.personal_backend.plugin:PersonalView"
personal_view = "accent_dird.plugins.personal.plugin:PersonalViewPlugin"
phonebook_backend = "accent_dird.plugins.phonebook_backend.plugin:PhonebookView"
phonebook_deprecated_view = "accent_dird.plugins.phonebook_deprecated.plugin:DeprecatedPhonebookViewPlugin"
phonebook_view = "accent_dird.plugins.phonebook.plugin:PhonebookViewPlugin"
profile_sources_view = "accent_dird.plugins.profile_sources.plugin:SourceViewPlugin"
profiles_view = "accent_dird.plugins.profiles.plugin:ProfilesViewPlugin"
sources_view = "accent_dird.plugins.sources.plugin:SourcesViewPlugin"
status_view = "accent_dird.plugins.status.plugin:StatusViewPlugin"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-auth-client = { workspace = true }
accent-confd-client = { workspace = true }
accent-bus = { workspace = true }
accent = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_dird", "accent_dird/plugins/*/api.yml"]

[tool.hatch.build.targets.wheel]
include = ["accent_dird", "accent_dird/plugins/*/api.yml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
