[project]
name = "accent-export-import"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryan@accentservices.com" }]
requires-python = ">=3.11"
dependencies = [
  "pyexcel-ods>=0.6.0",
  "cliff>=3.10.1",
  "accent-lib-rest-client",
  "accent-auth-client",
  "accent-confd-client",
]

[project.scripts]
accent-generate-dump = "accent_export_import.main:dump"
accent-import-dump = "accent_export_import.main:import_"

[project.entry-points."accent_export_import.dump_commands"]
list_resources = "accent_export_import.commands:ListResources"
list_fields = "accent_export_import.commands:ListFields"
add = "accent_export_import.commands:Add"
new = "accent_export_import.commands:New"

[project.entry-points."accent_export_import.import_commands"]
import = "accent_export_import.commands:Import"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-auth-client = { workspace = true }
accent-confd-client = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_export_import"]

[tool.hatch.build.targets.wheel]
include = ["accent_export_import"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
