[project]
name = "accent-db"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.13.0",
  "psycopg",
  "pytz~=2023.3.post1",
  "pyyaml>=6.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "sqlalchemy-utils>=0.37.2",
  "Unidecode>=1.2.0",
  "accent-dao",
  "accent",
  "accent-uuid",
]

[project.scripts]
accent-check-db = "accent_db.check_db:main"
accent-init-db = "accent_db.init_db:main"
accent-update-db = "accent_db.update_db:main"

[project.entry-points]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent-dao = { workspace = true }
accent = { workspace = true }
accent-uuid = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_db", "bin/pg-drop-db", "bin/pg-populate-db"]

[tool.hatch.build.targets.wheel]
include = ["accent_db", "bin/pg-drop-db", "bin/pg-populate-db"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
