[tool.poetry]
name = "accent-plugind-cli"
version = "0.1.0"
description = ""
authors = ["Ryan Clark <ryanc@accentservices.com>"]
packages = [
    {include = "accent_plugind_cli"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
kombu = "^5.0.2"
PyYAML = "^5.3.1"
requests = "^2.25.1"
stevedore = "^4.0.2"
accent = {path = "../../library/accent-lib-python"}
accent-auth-client = {path = "../../library/accent-auth-client"}
accent-lib-rest-client = {path = "../../library/accent-lib-rest-client"}
accent-plugind-client = {path = "../../library/accent-plugind-client"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.6.4"
pre-commit = "^2.20.0"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 99
fix = true

[tool.ruff.lint]
select = [
  "YTT",  # flake8-2020
  "S",  # flake8-bandit
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "C4",  # flake8-comprehensions
  "T10",  # flake8-debugger
  "SIM",  # flake8-simplify
  "I",  # isort
  "C90",  # mccabe
  "E",  # pycodestyle
  "W",  # pycodestyle
  "F", # pyflakes
  "PGH",  # pygrep-hooks
  "UP",  # pyupgrade
  "RUF",  # ruff
  "TRY",  # tryceratops
]

ignore = [
  "E501",  # LineTooLong
  "E731",  # DoNotAssignLambda
  "E203",  # Whitespace before ':'
  "W503",  # Line break before binary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["accent_pluginid_cli"]

[tool.poetry.plugins."console_scripts"]
accent-plugind-cli = "accent_plugind_cli.main:main"
