[project]
name = "accent-plugind-cli"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9"
dependencies = [
  "kombu>=5.0.2",
  "pyyaml>=6.0",
  "requests>=2.25.1",
  "stevedore>=5.4.1",
  "accent",
  "accent-auth-client",
  "accent-lib-rest-client",
  "accent-plugind-client",
]

[project.scripts]
accent-plugind-cli = "accent_plugind_cli.main:main"

[project.entry-points]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent = { workspace = true }
accent-auth-client = { workspace = true }
accent-lib-rest-client = { workspace = true }
accent-plugind-client = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_plugind_cli"]

[tool.hatch.build.targets.wheel]
include = ["accent_plugind_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
