[project]
name = "accent-plugind"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.11"
dependencies = [
  "cheroot>=8.5.2",
  "Flask-Cors>=3.0.10",
  "Flask-RESTful>=0.3.8",
  "flask>=1.1.2",
  "itsdangerous>=1.1.0",
  "Jinja2>=2.11.3",
  "kombu>=5.0.2",
  "markupsafe>=1.1.1",
  "marshmallow>=3.10.0",
  "netifaces2",
  "python-consul>=1.1.0",
  "pyyaml>=6.0",
  "requests>=2.25.1",
  "stevedore>=5.4.1",
  "Unidecode>=1.2.0",
  "werkzeug>=1.0.1",
  "accent-lib-rest-client",
  "accent-auth-client",
  "accent-confd-client",
  "accent-market-client",
  "accent",
  "accent-bus",
]

[project.scripts]
accent-plugind = "accent_plugind.bin.main:main"

[project.entry-points]

[dependency-groups]
dev = ["pytest>=8.3.5", "accent-test-helpers"]

[tool.uv.sources]
accent-test-helpers = { workspace = true }
accent-lib-rest-client = { workspace = true }
accent-auth-client = { workspace = true }
accent-confd-client = { workspace = true }
accent-market-client = { workspace = true }
accent = { workspace = true }
accent-bus = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_plugind", "accent_plugind/swagger/api.yml"]

[tool.hatch.build.targets.wheel]
include = ["accent_plugind", "accent_plugind/swagger/api.yml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
