[project]
name = "accent-prometheus-exporter"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9,<4.0"
dependencies = [
    "starlette_exporter",
    "prometheus_flask_exporter",
    "pyyaml~=6.0",
]

[project.optional-dependencies]
flask = ["flask~=1.0"]
fastapi = ["fastapi>=0.95,<0.96"]

[project.entry-points."accent_auth.http"]
metrics = "accent_prometheus_exporter.plugins.flask.metric.plugin:Plugin"

[project.entry-points."accent_calld.plugins"]
metrics = "accent_prometheus_exporter.plugins.flask.metric.plugin:Plugin"

[project.entry-points."accent_dird.views"]
metrics = "accent_prometheus_exporter.plugins.flask.metric.plugin:Plugin"

[project.entry-points."accent_chatd.plugins"]
metrics = "accent_prometheus_exporter.plugins.flask.metric.plugin:Plugin"

[project.entry-points."accent_sysconfd.plugins"]
metrics = "accent_prometheus_exporter.plugins.fastapi.metric.plugin:Plugin"

[dependency-groups]
dev = [
    "commitizen>=3.10.0,<4",
    "dunamai>=1.18.1,<2",
    "pytest>=7.2.0,<8",
    "pytest-cov>=4.0.0,<5",
    "deptry>=0.6.4,<0.7",
    "tox>=3.25.1,<4",
]

[tool.hatch.build.targets.sdist]
include = ["accent_prometheus_exporter"]

[tool.hatch.build.targets.wheel]
include = ["accent_prometheus_exporter"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 99
fix = true

[tool.ruff.lint]
select = [
  "YTT",  # flake8-2020
  "S",  # flake8-bandit
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "C4",  # flake8-comprehensions
  "T10",  # flake8-debugger
  "SIM",  # flake8-simplify
  "I",  # isort
  "C90",  # mccabe
  "E",  # pycodestyle
  "W",  # pycodestyle
  "F", # pyflakes
  "PGH",  # pygrep-hooks
  "UP",  # pyupgrade
  "RUF",  # ruff
  "TRY",  # tryceratops
]

ignore = [
  "E501",  # LineTooLong
  "E731",  # DoNotAssignLambda
  "E203",  # Whitespace before ':'
  "W503",  # Line break before binary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["UPDATE"]
