[project]
name = "accent-provd-cli"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9"
dependencies = [
  "accent-lib-rest-client",
  "accent-auth-client",
  "accent",
  "accent-provd-client",
]

[project.scripts]
accent-provd-cli = "accent-provd-cli.cli:client"

[project.entry-points]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-auth-client = { workspace = true }
accent = { workspace = true }
accent-provd-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
