[project]
name = "accent-provd-plugins"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.11"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.hatch.build.targets.sdist]
include = ["plugins", "dhcp/*"]

[tool.hatch.build.targets.wheel]
include = ["plugins", "dhcp/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
