[tool.poetry]
name = "accent-provd"
version = "0.1.0"
description = "Provd"
authors = ["Ryan Clark <ryanc@accentservices.com>"]
packages = [
    {include = "accent_provd"}
]
include = [
    "accent_provd/rest/api/api.yml",
    "accent_provd/tzinform/tzdatax",
    "twisted/.noinit",
    "twisted/plugins/provd_plugin.py",
    "twisted/plugins/.noinit",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
cryptography = ">=3.3.2"
jinja2 = "^2.11.3"
kombu = "^5.0.2"
markupsafe = "^1.1.1"
pydantic = "^1.7.4"
pyopenssl = ">=22.1.0,<23.0.0"
pyyaml = "^5.3.1"
requests = "^2.25.1"
stevedore = "^4.0.2"
twisted = "^21.2.0"
"zope.interface" = "^5.2.0"
accent-lib-rest-client = {path = "../../library/accent-lib-rest-client"}
accent-fetchfw = {path = "../../library/accent-fetchfw"}
accent-bus = {path = "../../library/accent-bus"}
accent-auth-client = {path = "../../library/accent-auth-client"}
accent-amid-client = {path = "../../library/accent-amid-client"}
accent = {path = "../../library/accent-lib-python"}

[tool.poetry.group.dev.dependencies]
commitizen = "^3.10.0"
dunamai = "^1.18.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.6.4"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 99
fix = true

[tool.ruff.lint]
select = [
  "YTT",  # flake8-2020
  "S",  # flake8-bandit
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "C4",  # flake8-comprehensions
  "T10",  # flake8-debugger
  "SIM",  # flake8-simplify
  "I",  # isort
  "C90",  # mccabe
  "E",  # pycodestyle
  "W",  # pycodestyle
  "F", # pyflakes
  "PGH",  # pygrep-hooks
  "UP",  # pyupgrade
  "RUF",  # ruff
  "TRY",  # tryceratops
]

ignore = [
  "E501",  # LineTooLong
  "E731",  # DoNotAssignLambda
  "E203",  # Whitespace before ':'
  "W503",  # Line break before binary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["UPDATE"]
